--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background">
@@ -29,9 +30,9 @@
             android:id="@+id/title_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp"
             android:orientation="vertical">
 
             <TextView
@@ -40,9 +41,9 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="10dp"
                 android:text="비밀번호"
+                android:textColor="@color/font"
                 android:textSize="28sp"
-                android:textStyle="bold"
-                android:textColor="@color/font" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/sub_title"
@@ -50,8 +51,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:text="새 비밀번호를 입력해주세요"
-                android:textSize="18sp"
-                android:textColor="@color/font_sub" />
+                android:textColor="@color/font_sub"
+                android:textSize="18sp" />
 
         </LinearLayout>
 
@@ -107,39 +108,39 @@
                 android:orientation="horizontal">
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_1"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="1"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_2"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="2"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_3"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:background="@drawable/keypad"
                     android:text="3"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -151,39 +152,39 @@
                 android:orientation="horizontal">
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_4"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="4"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_5"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="5"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_6"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:background="@drawable/keypad"
                     android:text="6"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -195,39 +196,39 @@
                 android:orientation="horizontal">
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_7"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="7"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_8"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="8"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_9"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:background="@drawable/keypad"
                     android:text="9"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -243,24 +244,24 @@
                     android:layout_marginRight="45dp" />
 
                 <Button
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_0"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/keypad"
                     android:text="0"
+                    android:textColor="@color/font"
                     android:textSize="22sp"
-                    android:textStyle="bold"
-                    android:textColor="@color/font" />
+                    android:textStyle="bold" />
 
                 <ImageButton
-                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:id="@+id/keypad_erase"
+                    style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/icon_erase"
-                    android:background="@drawable/keypad" />
+                    android:background="@drawable/keypad"
+                    android:src="@drawable/icon_erase" />
 
             </LinearLayout>
         </LinearLayout>
