--- a/app/src/main/res/layout/activity_backup.xml
+++ b/app/src/main/res/layout/activity_backup.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -38,36 +39,36 @@
                 <ImageView
                     android:layout_width="65dp"
                     android:layout_height="65dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="30dp"
-                    android:src="@drawable/google_drive"
-                    android:layout_gravity="center_horizontal"/>
+                    android:src="@drawable/google_drive" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginTop="22dp"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="18sp"
+                    android:text="작성한 일기를 Google Drive 로"
                     android:textColor="@color/font"
-                    android:text="작성한 일기를 Google Drive 로" />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="3dp"
-                    android:layout_gravity="center_horizontal"
-                    android:textSize="18sp"
+                    android:text="백업 및 복원할 수 있습니다."
                     android:textColor="@color/font"
-                    android:text="백업 및 복원할 수 있습니다." />
+                    android:textSize="18sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="50dp"
                     android:layout_gravity="center_horizontal"
-                    android:textSize="15sp"
+                    android:layout_marginBottom="50dp"
+                    android:text="(단, 사진은 백업이 불가능합니다.)"
                     android:textColor="@color/pastel_700"
-                    android:text="(단, 사진은 백업이 불가능합니다.)" />
+                    android:textSize="15sp" />
 
             </LinearLayout>
 
@@ -76,22 +77,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/view"
-                android:orientation="horizontal"
                 android:clickable="true"
-                android:paddingRight="20dp"
+                android:orientation="horizontal"
                 android:paddingLeft="20dp"
                 android:paddingTop="15dp"
+                android:paddingRight="20dp"
                 android:paddingBottom="15dp">
 
                 <TextView
-                    android:layout_alignParentLeft="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="10dp"
                     android:text="Google Drive 계정"
-                    android:textSize="18sp"
-                    android:textColor="@color/font"/>
+                    android:textColor="@color/font"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/accountTextView"
@@ -101,8 +102,8 @@
                     android:layout_centerVertical="true"
                     android:layout_marginBottom="10dp"
                     android:text="로그인을 해주세요."
-                    android:textSize="13sp"
-                    android:textColor="@color/pastel_700"/>
+                    android:textColor="@color/pastel_700"
+                    android:textSize="13sp" />
 
 
             </RelativeLayout>
@@ -119,32 +120,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/view"
-                android:orientation="horizontal"
                 android:clickable="true"
-                android:paddingRight="20dp"
+                android:orientation="horizontal"
                 android:paddingLeft="20dp"
                 android:paddingTop="15dp"
+                android:paddingRight="20dp"
                 android:paddingBottom="15dp">
 
                 <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="20dp"
                     android:text="백업하기"
-                    android:textSize="18sp"
-                    android:textColor="@color/font"/>
+                    android:textColor="@color/font"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/recentDateTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"
                     android:layout_toLeftOf="@+id/rightNavigate"
-                    android:textSize="13sp"
-                    android:textColor="@color/pastel_700" />
+                    android:textColor="@color/pastel_700"
+                    android:textSize="13sp" />
 
                 <ImageView
                     android:id="@+id/rightNavigate"
@@ -168,22 +169,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/view"
-                android:orientation="horizontal"
                 android:clickable="true"
-                android:paddingRight="20dp"
+                android:orientation="horizontal"
                 android:paddingLeft="20dp"
                 android:paddingTop="15dp"
+                android:paddingRight="20dp"
                 android:paddingBottom="15dp">
 
                 <TextView
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginRight="20dp"
                     android:text="복원하기"
-                    android:textSize="18sp"
-                    android:textColor="@color/font"/>
+                    android:textColor="@color/font"
+                    android:textSize="18sp" />
 
                 <ImageView
                     android:layout_width="27dp"
