--- a/app/src/main/res/layout/activity_password_settings.xml
+++ b/app/src/main/res/layout/activity_password_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -35,27 +36,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:background="@color/background_sub"
+                android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp"
                 android:paddingTop="30dp"
-                android:paddingBottom="30dp"
-                android:orientation="vertical">
+                android:paddingRight="20dp"
+                android:paddingBottom="30dp">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
-                    android:textSize="23sp"
-                    android:textStyle="bold"
                     android:text="잠금 설정으로\n소중한 일기를 보관해보세요!"
-                    android:textColor="@color/font" />
+                    android:textColor="@color/font"
+                    android:textSize="23sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
                     android:text="지문을 사용하려면 비밀번호 사용을 먼저 선택해주세요.\n지문 인증 실패시 비밀번호가 사용됩니다."
-                    android:textColor="@color/pastel_700" />
+                    android:textColor="@color/pastel_700"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
@@ -63,10 +64,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/background_sub"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:paddingTop="15dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="15dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -81,8 +82,8 @@
                     android:id="@+id/pw_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -90,10 +91,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/background_sub"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:paddingTop="15dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="15dp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -113,13 +114,13 @@
                         android:id="@+id/support_fp_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
-                        android:visibility="gone"
+                        android:layout_marginTop="3dp"
                         android:text="시스템 지문 등록 필요"
                         android:textColor="@color/font_sub"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:visibility="gone" />
 
                 </LinearLayout>
 
@@ -127,8 +128,8 @@
                     android:id="@+id/finger_print_switch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
 
             </RelativeLayout>
 
@@ -137,10 +138,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/view"
-                android:paddingTop="15dp"
-                android:paddingBottom="15dp"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:paddingTop="15dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="15dp">
 
                 <TextView
                     android:layout_width="wrap_content"
