--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -120,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:clipToPadding="false"
-                android:paddingTop="10dp"
+                android:paddingVertical="10dp"
                 android:visibility="gone" />
         </FrameLayout>
     </LinearLayout>
